--- a/package.json
+++ b/package.json
@@ -6,24 +6,66 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "lint:ts": "eslint .",
+    "lint:ts:fix": "eslint . --fix",
+    "lint:css": "npx stylelint \"src/**/*.{css,pcss}\"",
+    "lint:css:fix": "npx stylelint \"src/**/*.{css,pcss}\" --fix",
+    "lint": "npm run lint:ts && npm run lint:css",
+    "lint:fix": "npm run lint:ts:fix && npm run lint:css:fix",
+    "format:check": "npx prettier . --check",
+    "format": "npx prettier . --write",
+    "sb": "storybook dev -p 6006 --no-open",
+    "sb:build": "storybook build"
   },
   "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "@concero/ui-kit": "^0.2.21",
+    "react": "^18.0.0",
+    "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
+    "react-router-dom": "^7.4.0",
+    "compression": "^1.8.1",
+    "express": "^5.1.0",
+    "sirv": "^3.0.1"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^3.2.6",
     "@eslint/js": "^9.32.0",
+    "@storybook/addon-essentials": "^8.6.7",
+    "@storybook/addon-interactions": "^8.6.7",
+    "@storybook/addon-onboarding": "^8.6.7",
+    "@storybook/blocks": "^8.6.7",
+    "@storybook/react": "^8.6.7",
+    "@storybook/react-vite": "^8.6.7",
+    "@storybook/test": "^8.6.7",
+    "@types/css-modules": "^1.0.5",
+    "@types/node": "^22.13.1",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^4.7.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "eslint-plugin-storybook": "^0.11.6",
     "globals": "^16.3.0",
+    "path": "^0.12.7",
+    "postcss": "^8.5.1",
+    "postcss-custom-media": "^11.0.6",
+    "postcss-modules": "^6.0.1",
+    "precss": "^4.0.0",
+    "prettier": "^3.5.0",
+    "storybook": "^8.6.7",
+    "stylelint": "^14.16.1",
+    "stylelint-config-prettier": "^9.0.5",
+    "stylelint-config-recommended-scss": "^8.0.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.0",
-    "vite": "^7.1.0"
+    "typescript-plugin-css-modules": "^5.1.0",
+    "vite": "^6.3.5",
+    "vite-plugin-css-injected-by-js": "^3.5.2",
+    "vite-plugin-dts": "^4.5.0",
+    "vite-plugin-static-copy": "^2.3.0",
+    "vite-plugin-stylelint": "^6.0.0",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
