--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
+    "dev": "node server",
+    "build": "npm run build:client && npm run build:server",
+    "build:client": "vite build --outDir dist/client",
+    "build:server": "vite build --ssr src/entry-server.tsx --outDir dist/server",
+    "preview": "cross-env NODE_ENV=production node server",
     "lint:ts": "eslint .",
     "lint:ts:fix": "eslint . --fix",
     "lint:css": "npx stylelint \"src/**/*.{css,pcss}\"",
@@ -19,12 +22,12 @@
   },
   "dependencies": {
     "@concero/ui-kit": "^0.2.21",
+    "compression": "^1.8.1",
+    "express": "^5.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
-    "react-router-dom": "^7.4.0",
-    "compression": "^1.8.1",
-    "express": "^5.1.0",
+    "react-router-dom": "^7.8.0",
     "sirv": "^3.0.1"
   },
   "devDependencies": {
@@ -63,6 +66,7 @@
     "typescript-plugin-css-modules": "^5.1.0",
     "vite": "^6.3.5",
     "vite-plugin-css-injected-by-js": "^3.5.2",
+    "vite-plugin-devtools-json": "^0.4.1",
     "vite-plugin-dts": "^4.5.0",
     "vite-plugin-static-copy": "^2.3.0",
     "vite-plugin-stylelint": "^6.0.0",
