--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "vite-plugin-css-injected-by-js": "^3.5.2",
     "vite-plugin-devtools-json": "^0.4.1",
     "vite-plugin-dts": "^4.5.0",
+    "vite-plugin-ssr": "^0.4.142",
     "vite-plugin-static-copy": "^2.3.0",
     "vite-plugin-stylelint": "^6.0.0",
     "vite-tsconfig-paths": "^5.1.4"
