Fix build and start issues

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "node server",
     "build": "npm run build:client && npm run build:server",
     "build:client": "vite build --outDir dist/client",
-    "build:server": "vite build --ssr src/entry-server.tsx --outDir dist/server",
-    "preview": "cross-env NODE_ENV=production node server",
+    "build:server": "vite build --ssr src/ssr/entry-server.tsx --outDir dist/server",
+    "start": "cross-env NODE_ENV=production node server",
     "lint:ts": "eslint .",
     "lint:ts:fix": "eslint . --fix",
     "lint:css": "npx stylelint \"src/**/*.{css,pcss}\"",
@@ -46,6 +46,7 @@
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.20",
+    "cross-env": "^10.0.0",
     "eslint": "^9.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
