--- a/package.json
+++ b/package.json
@@ -4,11 +4,8 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
-		"dev": "node server",
-		"build": "npm run build:client && npm run build:server",
-		"build:client": "vite build --outDir dist/client",
-		"build:server": "vite build --ssr src/ssr/entry-server.tsx --outDir dist/server",
-		"start": "cross-env NODE_ENV=production node server",
+		"dev": "vite",
+		"build": "tsc -b && vite build",
 		"lint:ts": "eslint .",
 		"lint:ts:fix": "eslint . --fix",
 		"lint:css": "npx stylelint \"src/**/*.{css,pcss}\"",
@@ -16,19 +13,17 @@
 		"lint": "npm run lint:ts && npm run lint:css",
 		"lint:fix": "npm run lint:ts:fix && npm run lint:css:fix",
 		"format:check": "npx prettier . --check",
-		"format": "npx prettier . --write",
+		"format:fix": "npx prettier . --write",
 		"sb": "storybook dev -p 6006 --no-open",
 		"sb:build": "storybook build"
+
 	},
 	"dependencies": {
-		"@concero/ui-kit": "^0.2.21",
-		"compression": "^1.8.1",
-		"express": "^5.1.0",
+    "@concero/ui-kit": "^0.2.21",
 		"react": "^18.0.0",
 		"react-dom": "^18.3.1",
 		"react-helmet-async": "^2.0.5",
-		"react-router-dom": "^7.8.0",
-		"sirv": "^3.0.1"
+		"react-router-dom": "^7.4.0"
 	},
 	"devDependencies": {
 		"@chromatic-com/storybook": "^3.2.6",
@@ -46,7 +41,6 @@
 		"@types/react-dom": "^19.1.7",
 		"@vitejs/plugin-react": "^4.7.0",
 		"autoprefixer": "^10.4.20",
-		"cross-env": "^10.0.0",
 		"eslint": "^9.32.0",
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"eslint-plugin-react-refresh": "^0.4.20",
@@ -67,9 +61,7 @@
 		"typescript-plugin-css-modules": "^5.1.0",
 		"vite": "^6.3.5",
 		"vite-plugin-css-injected-by-js": "^3.5.2",
-		"vite-plugin-devtools-json": "^0.4.1",
 		"vite-plugin-dts": "^4.5.0",
-		"vite-plugin-ssr": "^0.4.142",
 		"vite-plugin-static-copy": "^2.3.0",
 		"vite-plugin-stylelint": "^6.0.0",
 		"vite-tsconfig-paths": "^5.1.4"
