--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
 		"react": "^18.0.0",
 		"react-dom": "^18.3.1",
 		"react-helmet-async": "^2.0.5",
-		"zustand": "^5.0.3",
-		"use-sync-external-store": "^1.4.0",
 		"react-router-dom": "^7.4.0",
-		"viem": "^2.33.3"
+		"use-sync-external-store": "^1.4.0",
+		"viem": "^2.33.3",
+		"zustand": "^5.0.3"
 	},
 	"devDependencies": {
 		"@chromatic-com/storybook": "^3.2.6",
