--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
 	},
 	"dependencies": {
 		"@concero/ui-kit": "^0.2.21",
+		"@tanstack/react-query": "^5.85.3",
 		"react": "^18.0.0",
 		"react-dom": "^18.3.1",
 		"react-helmet-async": "^2.0.5",
 		"react-router-dom": "^7.4.0",
 		"use-sync-external-store": "^1.4.0",
-		"viem": "^2.33.3",
+		"viem": "^2.34.0",
+		"wagmi": "^2.16.3",
 		"zustand": "^5.0.3"
 	},
 	"devDependencies": {
