--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	"dependencies": {
 		"@concero/ui-kit": "^0.2.21",
 		"@tanstack/react-query": "^5.85.3",
+		"blo": "^2.0.0",
 		"react": "^18.0.0",
 		"react-dom": "^18.3.1",
 		"react-helmet-async": "^2.0.5",
