--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@concero/ui-kit": "^0.2.21",
 		"@tanstack/react-query": "^5.85.3",
 		"blo": "^2.0.0",
+		"framer-motion": "^12.23.12",
 		"react": "^18.0.0",
 		"react-dom": "^18.3.1",
 		"react-helmet-async": "^2.0.5",
@@ -72,6 +73,6 @@
 		"vite-tsconfig-paths": "^5.1.4"
 	},
 	"optionalDependencies": {
-		 "@rollup/rollup-linux-x64-gnu": "4.9.5"
+		"@rollup/rollup-linux-x64-gnu": "4.9.5"
 	}
 }
