--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	"dependencies": {
 		"@concero/ui-kit": "^0.2.21",
 		"@tanstack/react-query": "^5.85.3",
+		"@uiball/loaders": "^1.3.1",
 		"blo": "^2.0.0",
 		"framer-motion": "^12.23.12",
 		"react": "^18.0.0",
